# courrier-express-littoral

./: README-DEPLOYMENT.md  README-FEATURES.md  README-TAURI.md  README.md  TAURI-BUILD.md  build-tauri.bat  build-tauri.sh  electron-config.md  index.html  package-lock.json  package.json  tailwind.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/alerts/: LicenseAlert.tsx  OverdueAlerts.tsx
src/components/config/: AppConfiguration.tsx
src/components/dashboard/: DashboardStats.tsx  MailTypeChart.tsx  MonthlyTrendChart.tsx  OverdueMail.tsx  QuickActions.tsx  RecentActivity.tsx
src/components/diagnostic/: SystemDiagnostic.tsx
src/components/forms/: FileUploadSection.tsx  FormDatePicker.tsx  FormInput.tsx  FormSection.tsx  FormSelect.tsx
src/components/layout/: Navbar.tsx
src/config/: formOptions.ts
src/hooks/: use-toast.ts  useAppConfig.ts  useDashboardData.ts  useStatisticsData.ts
src/pages/: IncomingMail.tsx  Index.tsx  OutgoingMail.tsx  Settings.tsx  Statistics.tsx
src/types/: fileSystemAccess.ts  mail.ts  mailExtended.ts
src/utils/: auditLogger.ts  configManager.ts  dataHelpers.ts  dataMigration.ts  database.ts  deploymentHelpers.ts  diskStorage.ts  electronBridge.ts  exportUtils.ts  fileSystemStorage.ts  incomingMailDB.ts  incomingMailStorage.ts  licenseManager.ts  outgoingMailDB.ts  outgoingMailStorage.ts  printUtils.ts  saveOutgoingMailToLocalStorage.ts  statisticsUtils.ts  storageAdapter.ts  storageAdapterLocal.ts  storageAdapterTauri.ts  tauriBridge.ts
supabase/: config.toml
(+28 files in other folders)
