[package]
name = "anor-desktop"
version = "1.0.0"
description = "Application de gestion de courriers ANOR"
authors = ["ANOR Team"]
license = "MIT"
repository = ""
default-run = "anor-desktop"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = ["api-all", "dialog-all", "fs-all", "path-all", "os-all"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]